# isONclust3

./: Cargo.toml  README.md
Example_data/: test_data.fastq
src/: Parallelization_side.rs  clustering.rs  file_actions.rs  generate_sorted_fastq_for_cluster.rs  generate_sorted_fastq_new_version.rs  gff_handling.rs  gtf_handling.rs  isONclust.rs  main.rs  seeding_and_filtering_seeds.rs  side_functions_corr.rs  structs.rs  write_output.rs
