rustflags = ["-Ctarget-cpu=native"]
[package]
name = "isONclust3"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1"
bio-seq = "0.10.0"
clap = { version = "4.4.3", features = ["derive","cargo"] }
clap-cargo = "0.12.0"
rayon = "1.7"
memory-stats = "1.0.0"
cargo-valgrind = "2.1.0"
rustc-hash = "1.1.0"
minimizer-iter = "1.2.1"
nohash-hasher = "0.2.0"